@startuml UML Akropolis - Full

class CouleursAkropolis(enum) {
    BLANC
    BLEU
    JAUNE
    ROUGE
    VIOLET
    VERT
}

class Difficulte(enum) {
    FACILE
    NORMALE
    DIFFICILE
}

class GameMode(enum) {
    SOLO
    MULTIJOUEUR
}

class TypeHexagone(enum) {
    Hexagone
    Place
    Carriere
    Quartier
}

class Vector2 {
    + x : float
    + y : float
    + operator<(const Vector2 v) : bool
    + operator+(const Vector2& v) : Vector2
    + operator-(const Vector2& v) : Vector2
    + operator==(const Vector2& v) : bool
}

abstract class Hexagone {
    # couleur : CouleursAkropolis
    # localPos : Vector2
    # tuileParent : Tuile*

    + Hexagone (tuile_parent : Tuile*, localPos : const Vector2&, couleur : CouleursAkropolis)
    + get_couleur() : int
    + get_tuile() : Tuile*
    + get_local_position() : const Vector2&
    + get_hauteur() : int
    + peut_etre_placée(map:Map*, position:Vector2) const : bool {virtual}
    + quand_recouvert(joueur_qui_la_recouvre:Joueur*) const {virtual}
    + get_text() : const string {pure virtual}
    + affiche_console(highlighted : bool) const : const vector<string>
    + get_type() const : TypeHexagone {virtual}
}

class Carriere extends Hexagone {
    # pierre_count : int

    + Carriere (tuile_parent : Tuile*, localPos : const Vector2&)
    + get_type() : TypeHexagone
    + get_text() : const string
    + quand_recouvert(joueur_qui_la_recouvre:Joueur*) const
}

class Place extends Hexagone {
    # etoiles : int

    + Place (tuile_parent : Tuile*, localPos : const Vector2&, couleur : CouleursAkropolis)
    + get_etoiles() : int
    + get_type() : TypeHexagone
    + get_text() : const string
}

class Quartier extends Hexagone {
    + Quartier (tuile_parent : Tuile*, localPos : const Vector2&, couleur : CouleursAkropolis)
    + get_type() : TypeHexagone
    + get_text() : const string
}


class HexagoneContainer {
    # container : map<Vector2, Hexagone*>
    # roation : float

    + hasHexagone(coordonees : const Vector2&) : bool
    + getHexagone(coordonees : const Vector2 &) : Hexagone*
    + getSize() const : size_t
    + tourne(sens_horaire : bool = true, centre_rotation : constVector2& = Vector2(0,0))
    + begin() : map::iterator<Vector2, Hexagone*>
    + end() : map::iterator<Vector2, Hexagone*>
    + begin() : map::const_iterator<Vector2, Hexagone*> 
    + end() : map::const_iterator<Vector2, Hexagone*> 
    + cbegin() : map::const_iterator<Vector2, Hexagone*> 
    + cend() : map::const_iterator<Vector2, Hexagone*> 
}
HexagoneContainer "*" *--> "*" Hexagone

abstract class Tuile extends HexagoneContainer {
    # static nextID : int
    # id : int {unique}
    # hauteur : int

    + set_hauteur(hauteur : const int)
    + get_hauteur() : int
    + get_id() const : int
    + operator==(t : const Tuile &t) const : bool
    + operator!=(t : const Tuile &t) const : bool
}

class TuileDépart extends Tuile {}

class TuileJeu extends Tuile {}

class Plateau extends HexagoneContainer  {
    + peut_placer(tuile : Tuile&, position : const Vector2&, premierPlacement : bool = false) : bool
    + placer(tuile : Tuile&, position : const Vector2&, premierPlacement : bool = false, joueur : Joueur* = nullptr) : bool
}


abstract class Joueur {
    # pierres : int
    # plateauJoueur : Plateau
    # scoreJoueur : Score*

    + get_joue_tout_seul() : bool {pure virtual}
    + get_score() : int
    + set_score(score : Score*)
    + get_pierre() : int
    + set_pierre(pierre : int)
    + ajouter_pierre(pierre : int)
    + get_plateau() : Plateau&
    + place_tuile(tuile : Tuile, coordonées : Vector2, premierPlacement : bool = false) : bool
    + jouer(chantier : Chantier&) {virtual}
}

Plateau "1" *-- "1..*" Joueur
Joueur "1" *-- "1" Score

class JoueurSimple extends Joueur {
    # ScoreJoueur : Score*

    + get_joue_tout_seul() : bool
}

class IllustreArchitecte extends Joueur {
    # difficulte : Difficulte

    # choisir_tuile(chantier : Chantier&) : Tuile*
    # trouver_emplacement_tuile(tuile : Tuile&) : Vector2
    + get_joue_tout_seul() : bool
    + get_score() : int
    + set_niveau(niveau : int)
    + get_difficulte() : Difficulte
    + jouer(chantier : Chantier&)
}

abstract class Score {
    # scoreDécoré : Score*

    # scoreLocal(plateau : Plateau*) : int {virtual}
    + Score()
    + Score(Score *scoreDecore)
    + score(plateau : Plateau*) : int
}
note left : Est un décorateur

class ScoreBleu extends Score {
    # scoreLocal(plateau : Plateau*) : int
    + score(plateau:Plateau*) : int 
}

class ScoreJaune extends Score {
    # scoreLocal(plateau : Plateau*) : int
}

class ScoreRouge extends Score {
    # scoreLocal(plateau : Plateau*) : int
}

class ScoreVert extends Score {
    # scoreLocal(plateau : Plateau*) : int
}

class ScoreViolet extends Score {
    # scoreLocal(plateau : Plateau*) : int
}

class ScoreBleuVariante extends Score {
    # scoreLocal(plateau : Plateau*) : int
}

class ScoreJauneVariante extends Score {
    # scoreLocal(plateau : Plateau*) : int
}

class ScoreRougeVariante extends Score {
    # scoreLocal(plateau : Plateau*) : int 
}

class ScoreVertVariante extends Score {
    # scoreLocal(plateau : Plateau*) : int
}

class ScoreVioletVariante extends Score {
    # scoreLocal(plateau : Plateau*) : int
}

class ScoreSoloArchitechteCallicrates extends Score {
    # scoreLocal(plateau : Plateau*) : int
}

class ScoreSoloArchitechteHippodamos extends Score {
    # scoreLocal(plateau : Plateau*) : int
}

class ScoreSoloArchitechteMetagenes extends Score {
    # scoreLocal(plateau : Plateau*) : int
}


class Deck {
    - taille : int
    - nombreTuiles : int
    - tuiles : Tuile*

    + Deck(nombreJoueurs:int)
    + get_taille() : int
    + obtenir_tuile() : Tuile
    + obtenir_tuile(nombre:int) : Tuile*
}
Deck "1" *-- "1..61" Tuile

class Chantier {

    - taille : size_t
    - nombreTuiles : size_t
    - tuiles : Tuile*[max_tuiles_par_chantier]

    - set_taille(taille:size_t)
    + set_nombre_joueurs(nombre_joueurs:int)
    + get_taille() const : size_t
    + get_nombre_tuiles() const : size_t
    + est_vide() const : bool
    + prendre_tuile(index:size_t) : Tuile*
    + ajouter_tuile(tuile:Tuile*)
    + ajouter_tuile(tuile:Tuile*, nombre:int)

    + begin() : Chantier::iterator
    + end() : Chantier::iterator
    + begin() const : Chantier::iterator
    + end() const : Chantier::iterator
    + cbegin() const : Chantier::iterator
    + cend() const : Chantier::iterator
}
Chantier "1" *-- "1..*" Tuile

class Jeu {
    # modeDeJeu : GameMode
    # nombreTours : size_t
    # maxNombreTours : size_t
    # nombreJoueurs : size_t
    # joueurs : Joueur* [nombreJoueursMax]
    # deck : Deck*
    # chantier : Chantier
    # affichage : Affichage*

    - calculerScores() : multimap<int,size_t>
    # initialisePlateau()
    # selectGameMode() {pure virtual}
    # selectJoueurs() {pure virtual}
    # selectNiveauIllustreArchitechte() : Difficulte {pure virtual}
    # selectReglesScore() {pure virtual}
    # selectTuile() : Tuile* {pure virtual}
    # placeTuile() {pure virtual}
    # afficheTourAutomatique() {pure virtual}
    # finDePartie(scores : multimap<int,size_t>) {pure virtual}
    + static getJeu() : Jeu*
    + gameLoop()
}
note right : Est un singleton

class JeuConsole extends Jeu {
    # selectGameMode()
    # selectJoueurs()
    # selectNiveauIllustreArchitechte() : Difficulte
    # selectReglesScore()
    # selectTuile() : Tuile*
    # placeTuile()
    # afficheTourAutomatique()
    # finDePartie(scores : multimap<int,size_t>)
}

class JeuGUI extends Jeu {

}

Jeu "1" *-- "1..*" Joueur
Jeu "1" *-- "1..*" TuileDépart
Jeu "1" o-- "1" Deck
Jeu "1" o-- "1" Chantier
Jeu "1" o-- "1" Affichage

abstract class Affichage {
    # affiche_joueur (Joueur &joueur, bool selectHexagone, Vector2 selectedHexagone) {pure virtual}
    # affiche_container (HexagoneContainer &container, bool selectHexagone, Vector2 selectedHexagone) {pure virtual}
    + affiche_container (HexagoneContainer &container)
    + affiche_container (HexagoneContainer &container, Vector2 selectedHexagone)
    + affiche_joueur (Joueur &joueur)
    + affiche_joueur (Joueur &joueur, Vector2 selectedHexagone)
}

class AffichageConsole extends Affichage {
    # affiche_joueur(Joueur& joueur, bool selectHexagone, Vector2 selectedHexagone)
    # affiche_container(HexagoneContainer& hexagoneContainer, bool selectHexagone, Vector2 selectedHexagone)
}

class AffichageGUI extends Affichage {

}

@enduml